# TinyInfer

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
cmake/: helper.cmake  misc.cmake
demo/jupyter/: demo.ipynb
doc/: README.md
infer/: .gitignore  CMakeLists.txt  main.cpp
infer/frontend/: parser.cpp  parser.h
infer/proto/: op_def.proto
infer/scripts/: compile_pb.sh
infer/utils/: io.cpp  io.h  node_base.cpp  node_base.h  tensor_base.cpp  tensor_base.h
scripts/: compile_pb.sh
src/: .gitignore  CMakeLists.txt  function.cpp  function.hpp  graph_util.cpp  graph_util.hpp  input.cpp  input.hpp  node.cpp  node.hpp  output.cpp  output.hpp  shape.hpp  tinyinfer.hpp
src/frontend/: parser.cpp  parser.h  parser.hpp  parser_helper.cpp  parser_helper.hpp
src/op/: convolution.cpp  convolution.hpp  convolution_op.cpp  convolution_op.hpp  convolution_relu_op.cpp  convolution_relu_op.hpp  dense.cpp  dense.hpp  dense_op.cpp  dense_op.hpp  dropout.cpp  dropout.hpp  dropout_op.cpp  dropout_op.hpp  flatten.cpp  flatten.hpp  flatten_op.cpp  flatten_op.hpp  maxpooling_2d.cpp  maxpooling_2d.hpp  maxpooling_2d_op.cpp  maxpooling_2d_op.hpp  op.hpp  parameter.cpp  parameter.hpp  relu.cpp  relu.hpp  relu_op.cpp  relu_op.hpp  sampleOp.cpp  sampleOp.hpp  softmax.cpp  softmax.hpp  softmax_op.cpp  softmax_op.hpp
src/pass/: convolve_relu_fusion.cpp  convolve_relu_fusion.hpp  dropout_elimination.cpp  dropout_elimination.hpp  futile_elimination.cpp  futile_elimination.hpp
src/runtime/: tensor.cpp  tensor.hpp
src/runtime/kernel/: addconstant.hpp  convolution.hpp  convolution_relu.hpp  dense.hpp  dropout.hpp  flatten.hpp  maxpool.hpp  operations.hpp  relu.hpp  softmax.hpp
src/utils/: io.cpp  io.hpp
test/: DenseTest.cpp  FlattenTest.cpp  MaxPoolTest.cpp  MnistTest.cpp  ReluTest.cpp  SoftMaxTest.cpp  functionTest.cpp  infer.cpp  inferTest.cpp  main.cpp  parserTest.cpp  predict.cpp  sampleTest.cpp  test_conv1.cpp  test_conv2.cpp  test_dense1.cpp  test_dense2.cpp  test_dense3.cpp  test_flatten1.cpp  test_maxpool1.cpp  test_relu1.cpp  test_relu2.cpp
train/jupyter/: 0_train_main.ipynb  1_converter.ipynb  2_read_play.ipynb  demo.ipynb
train/src/: converter.ipynb  mnist-in-plain-tensorflow.ipynb  mnist-tensorflow-introduction-Copy1.ipynb  mnist-tensorflow.ipynb  mnist-train-with-CNN.ipynb  play.ipynb  read_play.ipynb  train2.ipynb  train3.ipynb  train_main.ipynb
